# KB

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README_REQUIREMENT_PROGRAM_UPLOAD.md  archive_garbage_docs.ps1  commit_doc_alignment.ps1  commit_remaining.ps1  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  skills-lock.json  start_demo.bat
agent_kb_core/: .dockerignore  Dockerfile  README.md  pyproject.toml
agent_kb_core/deploy/: docker-compose.yml
agent_kb_core/deploy/kubernetes/base/: configmap.yaml  kustomization.yaml  namespace.yaml  network-policy.yaml  pvc.yaml  secret.example.yaml  service-account.yaml  service.yaml  statefulset.yaml
agent_kb_core/docs/: ARCHITECTURE.md  MIGRATION_PLAN.md  PHASE_1_STATUS.md  PHASE_2_INGESTION_COMPILER.md  PHASE_2_STATUS.md  PHASE_3_DOCUMENT_TO_CONTEXT.md  PHASE_3_STATUS.md  PHASE_4_RETRIEVAL_EVALUATION.md  PHASE_4_STATUS.md  PHASE_5_PERSISTENCE_AND_GOVERNANCE.md  PHASE_5_STATUS.md  PHASE_6_PRODUCTION_ADAPTERS.md  PHASE_6_STATUS.md  PHASE_7_PRODUCTION_HARDENING.md  PHASE_7_STATUS.md  PHASE_8_DEPLOYMENT_RELIABILITY.md  PHASE_8_R2_RELEASE_GATES.md  PHASE_8_STATUS.md  PHASE_9_R1_PLATFORM_DEPLOYMENT.md  PHASE_9_R1_STATUS.md  QUERY_CONTEXT_FLOW.md
agent_kb_core/domains/generic/: answer_contracts.json  domain.json  object_types.json
agent_kb_core/domains/obc_dcdc/: answer_contracts.json  domain.json  hidden_context.json  object_types.json  relation_types.json  terminology.json
agent_kb_core/src/agent_kb/: __init__.py  cli.py  platform_cli.py  recovery_cli.py  worker_cli.py
agent_kb_core/src/agent_kb/adapters/: __init__.py  client_codegen.py  mcp.py  mcp_transport.py  openapi.py
agent_kb_core/src/agent_kb/context/: __init__.py  builder.py  context_pack.py  evidence_judge.py
agent_kb_core/src/agent_kb/core/: __init__.py  compiler.py  documents.py  evidence.py  facts.py  source_units.py
agent_kb_core/src/agent_kb/domains/: __init__.py  loader.py  schema.py
agent_kb_core/src/agent_kb/embeddings/: __init__.py  providers.py  remote.py
agent_kb_core/src/agent_kb/evaluation/: __init__.py  feedback_eval.py  graph_eval.py  retrieval_eval.py
agent_kb_core/src/agent_kb/graph/: __init__.py  extraction.py  store.py
agent_kb_core/src/agent_kb/observability/: __init__.py  metrics.py  telemetry.py
agent_kb_core/src/agent_kb/operations/: __init__.py  cli.py  readiness.py
agent_kb_core/src/agent_kb/pipeline/: __init__.py  document_context.py  persistent_context.py  production_context.py
agent_kb_core/src/agent_kb/projection/: __init__.py  models.py  projector.py
agent_kb_core/src/agent_kb/query/: __init__.py  query_frame.py  understanding.py
agent_kb_core/src/agent_kb/retrieval/: __init__.py  card_builder.py  cards.py  engine.py  external_vector.py  hybrid.py  models.py  production.py  qdrant.py  reranker.py  vector.py  (+1 more)
agent_kb_core/tests/: test_domain_loader.py  test_phase2_compiler.py  test_phase3_document_context.py  test_phase4_retrieval.py  test_phase5_persistence.py  test_phase6_production.py  test_phase7_hardening.py  test_phase8_deployment.py  test_phase8_r2_operations.py  test_phase9_platform.py  test_query_context_flow.py
(+602 files in other folders)
