[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-kb-core"
version = "0.5.0"
description = "Generic evidence-grounded agent knowledge compiler"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "PyYAML>=6.0",
]

[project.scripts]
agent-kb = "agent_kb.cli:main"
agent-kb-ops = "agent_kb.operations.cli:main"
agent-kb-platform = "agent_kb.platform_cli:main"
agent-kb-recovery = "agent_kb.recovery_cli:main"
agent-kb-worker = "agent_kb.worker_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
